fixed main-in-work spacing

--- a/blocks/main-in-work/main-in-work.css
+++ b/blocks/main-in-work/main-in-work.css
@@ -1,17 +1,19 @@
 .main-in-work {
     width: calc(100% - 80px);
     margin: 0 auto;
-    padding: 0 0 150px;
+    padding: 50px 0 150px;
+  }
+
+
+  @media screen and (min-width: 680px) and (max-width: 1155px) {
+    .main-in-work {
+      padding: 50px 0 100px;
+    }
   }
 
   @media screen and (max-width: 679px) {
     .main-in-work {
+      width: calc(100% - 20px);
       padding: 0 0 64px;
-    }
-  }
-
-  @media screen and (min-width: 680px) and (max-width: 1155px) {
-    .main-in-work {
-      padding: 0 0 100px;
     }
   }
